--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,11 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="..\public\css\styles.css">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+   
+    <title>Mercado Liebre</title>
 </head>
+
 <body>
-    <h1>hola</h1>
+    <header>
+        <img src="..\public\images\logo-mercado-liebre.svg" width="360" alt="Logo de Mercado Liebre">
+        <p><input type="text" placeholder="Search.."></p>
+        <i class="fas fa-search"></i>
+        <p class="alineacion"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+
+        <nav>
+            <ul>
+                <li> <a href="#">Ofertas</a> </li>
+                <li> <a href="#">Tiendas Oficiales</a> </li>
+                <li> <a href="#">Vender</a> </li>
+                <li> <a href="#">Ayuda</a> </li>
+            </ul>
+            <ul>
+                <li> <a href="#">Creá tu cuenta</a> <i class="far fa-id-card"></i></li>
+                <li> <a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
+                <li> <a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <img src="..\public\images\img-home-banner.jpg" width="360" alt="Banner de Ofertas">
+    </section>
+    <main>
+        <section>
+            <h3>Basado en tu última visita</h3>
+            <img src="..\public\images\img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
+            <p class="precio">$6.770</p>
+            <p class="des">40% OFF</p>
+            <h4>Cafetera Moulinex</h4>
+            <img src="..\public\images\img-macbook-pro-2019.jpg" width="360" alt="Macbook">
+            <p class="precio"> $230.000</p>
+            <p class="des">20% off</p>
+            <h4>MacBook Pro 2019</h4>
+            <img src="..\public\images\img-samsung-galaxy-s10.jpg" width="360" alt="Telefono móvil samsung galaxy">
+            <p class="precio">$70.500</p>
+            <p class="des">10% off</p>
+            <h4>Samsung Galaxy S10</h4>
+            <img src="..\public\images\img-tv-samsung-smart.jpg" width="360" alt="SmartTV samsung">
+            <p class="precio">$23.200</p>
+            <p class="des">5% off</p>
+            <h4>SmartTv Samsung 43"</h4>
+        </section>
+        <section>
+            <h3>Ofertas</h3>
+            <img src="..\public\images\img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
+            <p class="precio">$6.770</p>
+            <p class="des">40% OFF</p>
+            <h4>Cafetera Moulinex</h4>
+            <img src="..\public\images\img-macbook-pro-2019.jpg" width="360" alt="Macbook">
+            <p class="precio">$230.000</p>
+            <p class="des">20% off</p>
+            <h4>MacBook Pro 2019</h4>
+            <img src="..\public\images\img-samsung-galaxy-s10.jpg" width="360" alt="Telefono móvil samsung galaxy">
+            <p class="precio">$70.500</p>
+            <p class="des">10% off</p>
+            <h4>Samsung Galaxy S10</h4>
+            <img src="..\public\images\img-tv-samsung-smart.jpg" width="360" alt="SmartTV samsung">
+            <p class="precio">$23.200</p>
+            <p class="des">5% off</p>
+            <h4>SmartTv Samsung 43"</h4>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <ul type="none">
+                <li>
+                    <p class="alineacion"> <i class="fas fa-credit-card" style="font-size:2em; color: #1259c3;"> </i>
+                    </p>
+                    <h4 class="alineacion">Pagá con tarjeta o en efectivo</h4>
+                    <p class="alineacion">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                        puntos de pago. ¡Y siempre es seguro!</p>
+                </li>
+                <li>
+                    <p class="alineacion"> <i class="fas fa-gift" style="font-size:2em; color: #1259c3;"></i></p>
+                    <h4 class="alineacion">Envío gratis desde $ 2.500</h4>
+                    <p class="alineacion">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                        productos. Es un beneficio de Mercado Puntos.</p>
+                </li>
+                <li>
+                    <p class="alineacion">
+                        <<i class="fas fa-user-shield" style="font-size:2em; color: #1259c3;"></i>
+                    </p>
+                    <h4 class="alineacion">Seguridad, de principio a fin</h4>
+                    <p class="alineacion">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                        porque estás siempre protegid@.</p>
+                </li>
+                <li>
+                    <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
+
 </html>
