home corregido href=/css/styles.css

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..\public\css\styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="..\public\images\logo-mercado-liebre.svg" width="360" alt="Logo de Mercado Liebre">
+        <img src="\images\logo-mercado-liebre.svg" width="360" alt="Logo de Mercado Liebre">
         <p><input type="text" placeholder="Search.."></p>
         <i class="fas fa-search"></i>
         <p class="alineacion"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
@@ -37,43 +37,43 @@
         </nav>
     </header>
     <section>
-        <img src="..\public\images\img-home-banner.jpg" width="360" alt="Banner de Ofertas">
+        <img src="\images\img-home-banner.jpg" width="360" alt="Banner de Ofertas">
     </section>
     <main>
         <section>
             <h3>Basado en tu última visita</h3>
-            <img src="..\public\images\img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
+            <img src="\images\img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
             <p class="precio">$6.770</p>
             <p class="des">40% OFF</p>
             <h4>Cafetera Moulinex</h4>
-            <img src="..\public\images\img-macbook-pro-2019.jpg" width="360" alt="Macbook">
+            <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="Macbook">
             <p class="precio"> $230.000</p>
             <p class="des">20% off</p>
             <h4>MacBook Pro 2019</h4>
-            <img src="..\public\images\img-samsung-galaxy-s10.jpg" width="360" alt="Telefono móvil samsung galaxy">
+            <img src="\images\img-samsung-galaxy-s10.jpg" width="360" alt="Telefono móvil samsung galaxy">
             <p class="precio">$70.500</p>
             <p class="des">10% off</p>
             <h4>Samsung Galaxy S10</h4>
-            <img src="..\public\images\img-tv-samsung-smart.jpg" width="360" alt="SmartTV samsung">
+            <img src="\images\img-tv-samsung-smart.jpg" width="360" alt="SmartTV samsung">
             <p class="precio">$23.200</p>
             <p class="des">5% off</p>
             <h4>SmartTv Samsung 43"</h4>
         </section>
         <section>
             <h3>Ofertas</h3>
-            <img src="..\public\images\img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
+            <img src="\images\img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
             <p class="precio">$6.770</p>
             <p class="des">40% OFF</p>
             <h4>Cafetera Moulinex</h4>
-            <img src="..\public\images\img-macbook-pro-2019.jpg" width="360" alt="Macbook">
+            <img src="\images\img-macbook-pro-2019.jpg" width="360" alt="Macbook">
             <p class="precio">$230.000</p>
             <p class="des">20% off</p>
             <h4>MacBook Pro 2019</h4>
-            <img src="..\public\images\img-samsung-galaxy-s10.jpg" width="360" alt="Telefono móvil samsung galaxy">
+            <img src="\images\img-samsung-galaxy-s10.jpg" width="360" alt="Telefono móvil samsung galaxy">
             <p class="precio">$70.500</p>
             <p class="des">10% off</p>
             <h4>Samsung Galaxy S10</h4>
-            <img src="..\public\images\img-tv-samsung-smart.jpg" width="360" alt="SmartTV samsung">
+            <img src="\images\img-tv-samsung-smart.jpg" width="360" alt="SmartTV samsung">
             <p class="precio">$23.200</p>
             <p class="des">5% off</p>
             <h4>SmartTv Samsung 43"</h4>
